# Habits_Tracker_Git

./: .env_sample  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py
habit/: admin.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
habit/migrations/: 0001_initial.py  0002_alter_habit_is_pleasant_habit_and_more.py  0003_alter_habit_time.py  0004_alter_habit_time.py
users/: models.py  services.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
